src/objects/stock__c.object
<CustomObject>
    <fields>
        <fullName>Field1__c</fullName>
        <formula>ProductNumber__r.Ename__c</formula>
        <label>产品英文名称</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <label>库存</label>
        <referenceTo>kucun__c</referenceTo>
        <relationshipLabel>库存明细</relationshipLabel>
        <relationshipName>kucun</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Field3__c</fullName>
        <label>常规库现存数量</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductCName__c</fullName>
        <formula>ProductNumber__r.Cname__c</formula>
        <label>#产品中文名称</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductNumber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>产品编号</label>
        <referenceTo>product__c</referenceTo>
        <relationshipName>GzBJ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReturnTime__c</fullName>
        <label>返厂时间</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Stock_key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>#库存键值</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>kucun_chanpinleixing__c</fullName>
        <formula>ProductNumber__r.RecordType.Name</formula>
        <label>产品类型</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>remark__c</fullName>
        <label>备注</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>state__c</fullName>
        <label>状态库</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>新品库</fullName>
                </value>
                <value>
                    <fullName>损耗库</fullName>
                </value>
                <value>
                    <fullName>备用机库</fullName>
                </value>
                <value>
                    <fullName>备用机损耗库</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>virtualnum__c</fullName>
        <label>可用库存</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>warehouse__c</fullName>
        <label>仓库地点</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>北京库</fullName>
                </value>
                <value>
                    <fullName>上海库</fullName>
                </value>
                <value>
                    <fullName>广州库</fullName>
                </value>
                <value>
                    <fullName>香港库</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcnum__c</fullName>
        <label>现存数量</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>yynum__c</fullName>
        <label>应有库存</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>库存明细</label>
    <listViews>
        <fullName>ALL</fullName>
        <columns>kucun_chanpinleixing__c</columns>
        <columns>Field2__c</columns>
        <columns>NAME</columns>
        <columns>state__c</columns>
        <columns>ProductCName__c</columns>
        <columns>warehouse__c</columns>
        <columns>xcnum__c</columns>
        <columns>yynum__c</columns>
        <columns>ProductNumber__c</columns>
        <columns>ReturnTime__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>remark__c</columns>
        <filterScope>Everything</filterScope>
        <label>全部</label>
    </listViews>
    <listViews>
        <fullName>GoBacktoCompany</fullName>
        <columns>NAME</columns>
        <columns>ProductCName__c</columns>
        <columns>Stock_key__c</columns>
        <columns>remark__c</columns>
        <columns>warehouse__c</columns>
        <columns>ProductNumber__c</columns>
        <columns>ReturnTime__c</columns>
        <columns>virtualnum__c</columns>
        <columns>xcnum__c</columns>
        <columns>yynum__c</columns>
        <columns>state__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>state__c</field>
            <operation>equals</operation>
            <value>返公司</value>
        </filters>
        <label>返公司</label>
    </listViews>
    <listViews>
        <fullName>GoBacktoFactory</fullName>
        <columns>NAME</columns>
        <columns>ProductCName__c</columns>
        <columns>Stock_key__c</columns>
        <columns>remark__c</columns>
        <columns>warehouse__c</columns>
        <columns>ProductNumber__c</columns>
        <columns>ReturnTime__c</columns>
        <columns>virtualnum__c</columns>
        <columns>xcnum__c</columns>
        <columns>yynum__c</columns>
        <columns>state__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>state__c</field>
            <operation>equals</operation>
            <value>返厂</value>
        </filters>
        <label>返厂</label>
    </listViews>
    <listViews>
        <fullName>NewProduct</fullName>
        <columns>NAME</columns>
        <columns>ProductNumber__c</columns>
        <columns>state__c</columns>
        <columns>warehouse__c</columns>
        <columns>ProductCName__c</columns>
        <columns>virtualnum__c</columns>
        <columns>xcnum__c</columns>
        <columns>yynum__c</columns>
        <columns>ReturnTime__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>remark__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>state__c</field>
            <operation>equals</operation>
            <value>新品库</value>
        </filters>
        <label>新品库</label>
    </listViews>
    <listViews>
        <fullName>WasteProduct</fullName>
        <columns>NAME</columns>
        <columns>ProductCName__c</columns>
        <columns>Stock_key__c</columns>
        <columns>remark__c</columns>
        <columns>warehouse__c</columns>
        <columns>ProductNumber__c</columns>
        <columns>ReturnTime__c</columns>
        <columns>virtualnum__c</columns>
        <columns>xcnum__c</columns>
        <columns>yynum__c</columns>
        <columns>state__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>state__c</field>
            <operation>equals</operation>
            <value>废品库</value>
        </filters>
        <label>废品库</label>
    </listViews>
    <listViews>
        <fullName>guangzhoukucun</fullName>
        <columns>NAME</columns>
        <columns>state__c</columns>
        <columns>ProductCName__c</columns>
        <columns>warehouse__c</columns>
        <columns>xcnum__c</columns>
        <columns>yynum__c</columns>
        <columns>ProductNumber__c</columns>
        <columns>ReturnTime__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>remark__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>warehouse__c</field>
            <operation>contains</operation>
            <value>广州</value>
        </filters>
        <label>广办库存</label>
    </listViews>
    <nameField>
        <label>库存编号</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>库存明细</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ReturnTimeNotNull</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT(state__c)  = &apos;返厂&apos;  &amp;&amp;  ISNULL(ReturnTime__c)</errorConditionFormula>
        <errorMessage>状态为返厂时，返厂时间必填</errorMessage>
    </validationRules>
</CustomObject>